# torque-tunnel

./: .env.example  .gitignore  README.md  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json  test_upload.txt
.github/: copilot-instructions.md
blueprints/: local-shell-executor.yaml  persistent-container.yaml  remote-shell-executor.yaml  shell-workflow.yaml  test-env-workflow.yaml
docs/: configuration.md  croc-file-transfer.md  design-api-resilience.md  design-login-flow.md  k8s-agent-support.md  onboarding.md
scripts/: onboard.ps1  onboard.sh
src/shellagent/: __init__.py  mcp_tool.py  torque_client.py
src/torque_tunnel/: __init__.py  auth.py  config.py  croc_manager.py  login_page.html  mcp_tool.py  onboarding.py  sso_browser.py  torque_client.py
tests/: _onboarding_invariants.py  test_auth.py  test_auth_sso.py  test_cli_args.py  test_config.py  test_croc_manager.py  test_dangerous_commands.py  test_download.py  test_handler_validation.py  test_hot_reload.py  test_onboarding.py  test_onboarding_corpus.py  test_onboarding_edgecases.py  test_onboarding_fuzz.py  test_onboarding_hardening.py  test_onboarding_properties.py  test_prepare_files.py  test_resilience.py  test_sso_browser.py
