[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellagent"
version = "0.1.0"
description = "MCP tool for executing remote commands via Torque Shell Grains"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
shellagent = "shellagent.mcp_tool:main"

[tool.setuptools.packages.find]
where = ["src"]
